# tdom-svcs

./: .gitignore  AGENTS.md  CLAUDE.md  FUNCTION_VS_CLASS_COMPONENTS_PLAN.md  Justfile  LICENSE  README.md  TODO.md  __refactoring.md  conftest.py  pyproject.toml  tdom_example.py
.claude/: instructions.md
.clinerules/: 01-agent-os.md
.clinerules/workflows/: plan-product.md  shape-spec.md
.github/workflows/: ci.yml  pages.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md
agent-os/skills/: configuration.md  documentation.md  error-handling.md  examples.md  frontend.md  justfile.md  logging.md  python.md  ruff.md  sphinx-test.md  svcs.md  sybil.md  t-strings.md  tdom.md  ty.md  uv.md
agent-os/standards/: agent-verification.md  index.yml
docs/: api_reference.md  categories.md  conf.py  conftest.py  core_concepts.md  examples.md  getting_started.md  how_it_works.md  index.md  node.md  research.md  research_results.md
docs/domain/: index.md
docs/examples/: basic_tdom_injectable.md  basic_tdom_svcs.md  component_discovery.md  direct_decorator.md  index.md  location_based_components.md  middleware.md  override_global.md  override_location.md  override_resource.md  pure_tdom.md  resource_based_components.md
docs/research/: 2026-05-10-basic-tdom-vs-tdom-svcs-domain-split.md  di-context-threading.md  drop-services-path.md  port-tstring-html-integrations-revisited.md  port-tstring-html-integrations.md
docs/services/: component_lookup.md  component_registry.md  index.md  introspection.md  middleware.md  path.md
docs/superpowers/: migration-inventory.md  roadmap-archive.md  roadmap-backlog.md  roadmap-standards.md  roadmap.md
examples/: README.md  component_discovery.py  direct_decorator_application.py  location_based_components.py  override_global.py  override_location.py  override_resource.py  pure_tdom.py  resource_based_components.py
examples/basic/: function_dataclass_poco.py  inject_service.py  props_priority.py  pure_tdom.py  svcs_container.py  tdom_svcs.py
examples/basic_tdom_injectable/: README.md  __init__.py  app.py  site.py  test_example.py
examples/basic_tdom_svcs/: README.md  __init__.py  app.py  site.py  test_example.py
examples/categories/: README.md  categories_example.py  imperative_categories.py  organizing_with_categories.py
examples/common/: __init__.py  components.py  request.py  services.py
examples/component_discovery/: README.md  __init__.py  app.py  site.py  test_example.py
examples/direct_decorator/: __init__.py  app.py  site.py
examples/domain_stories/: __init__.py  stories.py
examples/hopscotch/: basic_container.py
examples/location_based_components/: README.md  app.py  site.py  test_example.py
examples/middleware/: 01_basic_middleware.py  02_middleware_with_dependencies.py  README.md  (+8 more)
tests/: __init__.py  conftest.py  test_additional_categories.py  test_categories.py  test_categories_integration.py  test_component_discovery_edge_cases.py  test_component_lookup_integration.py  test_component_middleware_storage.py  test_component_name_registry.py  test_component_system.py  test_context_config_passing.py  test_di_injection.py  test_domain_inventory.py  test_example_docs_migration.py  test_examples.py  test_free_threading.py  test_hopscotch_resolution.py  test_html_wrapper.py  test_introspection.py  test_judge_confidence_evidence.py  test_processor_unit.py  test_protocols.py  test_register_implementation.py  test_scan_components.py  test_storyville_dependency_boundary.py
(+286 files in other folders)
