[project]
name = "tdom-svcs"
version = "0.1.0"
description = "TDOM integration with svcs dependency injection"
requires-python = ">=3.14"
dependencies = [
    "aria-testing",
    "svcs",
    "svcs-di",
    "tdom",
    "ty>=0.0.21",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "linkify-it-py>=2.0.3",
    "pyrefly>=0.46.1",
    "pyright>=1.1.407",
    "pytest-cov>=4.1.0",
    "sybil[pytest]>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
python_files = ["test_*.py", "test_example.py"]
addopts = "-p no:doctest -m \"not slow\""
pythonpath = ["examples"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "freethreaded: marks tests that verify free-threading compatibility",
]
# Free-threading safety: timeout tests to detect hangs/deadlocks
timeout = 60
faulthandler_timeout = 120

[tool.coverage.report]
fail_under = 80


[tool.ty.src]
include = ["examples", "src", "tests"]
exclude = ["agent-os"]

[tool.ty.environment]
extra-paths = ["./examples"]
python = "../.venv"

[tool.uv.sources]
aria-testing = { workspace = true }
svcs-di = { workspace = true }
tdom = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
